PmSyntax fix misalignment for some skins (Choice...).
git-svn-id: svn://pmwiki.org/pmwiki/trunk@3889 524c5546-5005-0410-9a3e-e25e191bd360

--- a/pub/guiedit/pmwiki.syntax.css
+++ b/pub/guiedit/pmwiki.syntax.css
@@ -177,6 +177,7 @@ code.pmhlt, .pmhlt code, #htext.pmhlt {
 #chk_hlt_wrap {
   float: right;
 }
+#chk_hlt_wrap > * { display: inline; }
 #wikiedit #chk_hlt_wrap[data-checked="true"] ~ * #text,
 #wikiedit #chk_hlt_wrap[data-checked="true"] ~ #text {
   position: relative;
